// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ZoomPanSlider /> renders with children 1`] = `
<Swiper
  autoPlay={false}
  className={null}
  classNames={Object {}}
  controls={false}
  disabled={false}
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={null}
  onSlideChange={[Function]}
  rebuildOnUpdate={false}
  slidesPerView={1}
  snapItems={true}
>
  <SwiperItem
    className={null}
    key="zoompanchild-0/.0"
  >
    <ZoomPanContainer
      maxZoom={4}
      minZoom={1}
      onZoom={[Function]}
      smoothness={500}
      zoomBounce={0.3}
      zoomOnTap={2}
    >
      <TestElement />
    </ZoomPanContainer>
  </SwiperItem>
  <SwiperItem
    className={null}
    key="zoompanchild-1/.1"
  >
    <ZoomPanContainer
      maxZoom={4}
      minZoom={1}
      onZoom={[Function]}
      smoothness={500}
      zoomBounce={0.3}
      zoomOnTap={2}
    >
      <TestElement />
    </ZoomPanContainer>
  </SwiperItem>
  <SwiperItem
    className={null}
    key="zoompanchild-2/.2"
  >
    <ZoomPanContainer
      maxZoom={4}
      minZoom={1}
      onZoom={[Function]}
      smoothness={500}
      zoomBounce={0.3}
      zoomOnTap={2}
    >
      <TestElement />
    </ZoomPanContainer>
  </SwiperItem>
  <SwiperItem
    className={null}
    key="zoompanchild-3/.3"
  >
    <ZoomPanContainer
      maxZoom={4}
      minZoom={1}
      onZoom={[Function]}
      smoothness={500}
      zoomBounce={0.3}
      zoomOnTap={2}
    >
      <TestElement />
    </ZoomPanContainer>
  </SwiperItem>
  <SwiperItem
    className={null}
    key="zoompanchild-4/.4"
  >
    <ZoomPanContainer
      maxZoom={4}
      minZoom={1}
      onZoom={[Function]}
      smoothness={500}
      zoomBounce={0.3}
      zoomOnTap={2}
    >
      <TestElement />
    </ZoomPanContainer>
  </SwiperItem>
</Swiper>
`;

exports[`<ZoomPanSlider /> wraps children in zoom containers 1`] = `
<Swiper
  autoPlay={false}
  className={null}
  classNames={Object {}}
  controls={false}
  disabled={false}
  indicators={false}
  initialSlide={0}
  interval={3000}
  loop={false}
  maxIndicators={null}
  onSlideChange={[Function]}
  rebuildOnUpdate={false}
  slidesPerView={1}
  snapItems={true}
>
  <SwiperItem
    className={null}
    key="zoompanchild-0/.0"
  >
    <ZoomPanContainer
      maxZoom={4}
      minZoom={1}
      onZoom={[Function]}
      smoothness={500}
      zoomBounce={0.3}
      zoomOnTap={2}
    >
      <TestElement />
    </ZoomPanContainer>
  </SwiperItem>
  <SwiperItem
    className={null}
    key="zoompanchild-1/.1"
  >
    <ZoomPanContainer
      maxZoom={4}
      minZoom={1}
      onZoom={[Function]}
      smoothness={500}
      zoomBounce={0.3}
      zoomOnTap={2}
    >
      <TestElement />
    </ZoomPanContainer>
  </SwiperItem>
</Swiper>
`;
